[metadata]
name = messenger-api-python
version = 2023.12.15-post1
author = krishna2206
author_email = fitiavana.krishna@gmail.com
description = Python wrapper to the various APIs in Facebook Messenger Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krishna2206/messenger-api-python
license = MIT License
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
install_requires =
	python_magic
	requests
	requests_toolbelt