[metadata]
name = messenger-api-python
version = 2026.07.22
author = krishna2206
author_email = fitiavana.krishna@gmail.com
description = Python wrapper to the various APIs in Facebook Messenger Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krishna2206/messenger-api-python
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.9
install_requires =
	python-magic>=0.4.27,<1
	requests>=2.31.0,<3
	requests-toolbelt>=1.0.0,<2